# backend

./: .gitignore  .pre-commit-config.yaml  README.md  docparser.py  localhost.py  main.py  purge.py  pyproject.toml  serve.py
model/: docparser.py  tip_llm.py
mothers/: consumption.py  price.py
routers/: bill.py  price_consumption.py  tip.py
schemas/: bill.py  errors.py  price_consumption.py
services/: bill.py  csv_service.py  date.py  image_service.py  mock_bill.py
services/bill/: bil_imp.py  bill.py  bill_service.py  mock_bill.py
services/price_consumption/: mock_price_consumption.py  price_consumption_imp.py  price_consumption_service.py
services/tip/: mock_tip.py  tip_imp.py  tip_service.py
static/data/: 137fe4b3-9114-4f2d-9079-33fa4d707d87.csv  e8a37024-111b-42a3-865b-e05d72f7ad4f.csv
static/parser/: f7aa989b-706a-4d21-ba72-cd51f9530d36.txt
